--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,13 @@
     <form method="post" action="/login">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" placeholder="Username" required>
+        <br>
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required>
+        <br>
+        <label for="confirm">Confirm password:</label>
+        <input type="password" name="confirm" id="confirm" required>
+        <br>
         <input type="submit" value="Login">
     </form>
 </body>
