Add user info page, edit info and password. Add main page with travels

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,5 +21,8 @@
         <br>
         <input type="submit" value="Login">
     </form>
+    <form method="get" action="register.html">
+        <input type="submit" value="Register">
+    </form>
 </body>
 </html>
