Driver can add trips, edit their car, search by city and date

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -33,5 +33,10 @@
     <form method="get" action="/edit_password">
         <input type="submit" value="Edit password">
     </form>
+    {% if user.status == 1 %}
+    <form method="get" action="/edit_car">
+        <input type="submit" value="Your car">
+    </form>
+    {% endif %}
 </body>
 </html>
