--- a/templates/all_find_travels.html
+++ b/templates/all_find_travels.html
@@ -6,9 +6,17 @@
 </head>
 <body>
     <h1>Trips</h1>
+    {% if message %}
+    <p style="color: forestgreen">{{message}}</p>
+    {% endif %}
     {% for trip in travels %}
-    <p>{{ trip.from_city }}</p>
-    <p>{{ trip.to_city }}</p>
+    <p>Поездка №{{ trip.id }}</p>
+    <p>Водитель {{ trip.name }}</p>
+    <p>{{ trip.city_name}} - {{ trip.Cities_city_name }}</p>
+    <p>Ориентировочное время в пути: {{ trip.travel_time }} часов</p>
+    <p>Машина: {{ trip.car_name }} {{ trip.car_model }} {{ trip.car_color }}</p>
+    <p>Цена от водителя: {{ trip.price }} грн.</p>
+        <br>
     {% endfor %}
 </body>
 </html>
