--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
         <br>
         <input type="submit" value="Login">
     </form>
-    <form method="get" action="register.html">
+    <form method="get" action="/register">
         <input type="submit" value="Register">
     </form>
 </body>
