Users see which rides they have signed up for, and drivers who have signed up for their rides (passenger list with their contact numbers).

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -38,5 +38,11 @@
         <input type="submit" value="Your car">
     </form>
     {% endif %}
+    <form method="get" action="/user_trips">
+        <input type="submit" value="Your trips">
+    </form>
+    <form method="get" action="/travels">
+        <input type="submit" value="Home">
+    </form>
 </body>
 </html>
