--- a/templates/travels.html
+++ b/templates/travels.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Select a route and travel time</h1>
+<form action="/edit_user" method="get">
+    <input type="submit" value="Profile">
+</form>
+<br>
 <form action="/all_find_travels" method="get">
     <label for="from_city">From:</label>
     <select name="from_city" id="from_city">
