--- a/templates/all_find_travels.html
+++ b/templates/all_find_travels.html
@@ -5,26 +5,32 @@
     <title>Trips</title>
 </head>
 <body>
-    <h1>Trips</h1>
-    {% if message %}
-    <p style="color: forestgreen">{{message}}</p>
-    {% endif %}
-    {% for trip in travels %}
+<h1>Trips</h1>
+<form action="/edit_user" method="get">
+    <input type="submit" value="Profile">
+</form>
+<form method="get" action="/travels">
+    <input type="submit" value="Back">
+</form>
+{% if message %}
+    <p style="color: forestgreen">{{ message }}</p>
+{% endif %}
+{% for trip in travels %}
     <p>Поездка №{{ trip.id }}</p>
     <p>Водитель {{ trip.name }}</p>
-    <p>{{ trip.city_name}} - {{ trip.Cities_city_name }}</p>
+    <p>{{ trip.city_name }} - {{ trip.Cities_city_name }}</p>
     <p>Ориентировочное время в пути: {{ trip.travel_time }} часов</p>
     <p>Машина: {{ trip.car_name }} {{ trip.car_model }} {{ trip.car_color }}</p>
     <p>Цена от водителя: {{ trip.price }} грн.</p>
     <p>Свободно мест: {{ trip.current_number_of_seats }} / {{ trip.total_number_of_seats }}</p>
     {% if user.status == 2 %}
         <form action="/all_find_travels" method="post">
-        <input type="hidden" value="{{ user.id }}" name="user_id">
-        <input type="hidden" value="{{ trip.id }}" name="trip_id">
-        <input type="submit" value="Записаться">
+            <input type="hidden" value="{{ user.id }}" name="user_id">
+            <input type="hidden" value="{{ trip.id }}" name="trip_id">
+            <input type="submit" value="Записаться">
         </form>
     {% endif %}
     <br>
-    {% endfor %}
+{% endfor %}
 </body>
 </html>
